--- a/_posts/langs/2020-01-01-aceto.md
+++ b/_posts/langs/2020-01-01-aceto.md
@@ -3,8 +3,8 @@ layout: post
 title:  "Aceto"
 homepage: "https://github.com/aceto/aceto"
 date:   2020-01-01 03:00:00 -0600
-logo: '/images/logos/missing-logo.png'
-permalink: /langs/aceto
+logo: '../images/logos/missing-logo.png'
+permalink: '../langs/aceto'
 category: Language
 ---
 
